# walrus

./: .editorconfig  .gitignore  .licensesnipignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .taplo.toml  .tarpaulin.toml  .yamlfmt.yml  404.html  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  README.md  SECURITY.md  SECURITY_DISCLOSURE_2025.md  WALRUS_INDEX_ARCHITECTURE.md  WALRUS_SITES_UPLOADER_GUIDE.md  _typos.toml  async_upload_example.rs  binary-build-list.json  blog.html  book.toml  client_config.yaml  deny.toml  flake.nix  glossary.html  index.html  justfile  llms-full.txt  llms.txt  network-reference.html.html  print.html  procman.yaml  quilt-uploader.html  search.html  searchindex.js  searchindex.json  simulation_config.toml  (+8 more)
crates/event-streaming/: Cargo.toml  build.rs
crates/event-streaming/src/: lib.rs
crates/fan-out-proxy/: Cargo.toml  README.md
crates/fan-out-proxy/src/: client.rs  controller.rs  error.rs  main.rs  metrics.rs  params.rs  tip.rs  utils.rs
crates/fan-out-proxy/src/tip/: check.rs  config.rs  error.rs
crates/walrus-core/: Cargo.toml
crates/walrus-core/benches/: basic_encoding.rs  blob_encoding.rs  encoding_phases.rs  symbol_file.rs
crates/walrus-core/examples/: profile_encoding.rs
crates/walrus-core/src/: by_axis.rs  encoding.rs  errors.rs  inconsistency.rs  keys.rs  lib.rs  merkle.rs  messages.rs  metadata.rs  test_utils.rs  utils.rs
crates/walrus-core/src/encoding/: arena.rs  basic_encoding.rs  blob_encoding.rs  common.rs  config.rs  disk_encoder.rs  errors.rs  mapping.rs  quilt_encoding.rs  slivers.rs  symbols.rs  utils.rs
crates/walrus-core/src/messages/: certificate.rs  invalid_blob_id.rs  proof_of_possession.rs  storage_confirmation.rs  sync_shard.rs
crates/walrus-e2e-tests/: Cargo.toml
crates/walrus-e2e-tests/src/: lib.rs
crates/walrus-e2e-tests/tests/: blob_manager_test.rs  lib.rs  test_client.rs  test_client_with_field_masking.rs  test_event_blobs.rs  test_field_masking_experimental.rs  test_field_masking_integration.rs  test_publish_package.rs
crates/walrus-indexer/: Cargo.toml  DEVELOPMENT_PLAN.md  IMPLEMENTATION_STATUS.md  config-example.yaml  test_indexer.sh
crates/walrus-indexer/src/: async_task_manager.rs  async_task_sorter.rs  checkpoint_downloader.rs  db_map.rs  errors.rs  event_processor.rs  indexer.rs  lib.rs  quilt_index_task_manager.rs  routes.rs  server.rs  storage.rs  test_util.rs  test_utils.rs
crates/walrus-indexer/src/event_processor/: checkpoint.rs  client.rs  config.rs  db.rs  metrics.rs  processor.rs
crates/walrus-indexer/src/storage/: mod.rs
crates/walrus-indexer/tests/: event_processor_integration.rs  indexer_e2e_test.rs  indexer_run_integration.rs  rest_api_client_test.rs  test_cluster_integration.rs
crates/walrus-local-testbed/: Cargo.toml
crates/walrus-local-testbed/src/: main.rs
crates/walrus-node-prober/: Cargo.toml
crates/walrus-node-prober/src/: health_checker.rs  main.rs
crates/walrus-proxy/: Cargo.toml
crates/walrus-proxy/src/: admin.rs  config.rs  consumer.rs  handlers.rs  histogram_relay.rs  lib.rs  main.rs  metrics.rs  middleware.rs  prom_to_mimir.rs
crates/walrus-proxy/src/fixtures/: config.yaml
crates/walrus-proxy/src/providers/: mod.rs
crates/walrus-rust-sdk/: Cargo.toml  README.md
crates/walrus-rust-sdk/src/: blob_id.rs  error.rs  lib.rs  metadata.rs
crates/walrus-s3-gateway/: CLIENT-SIDE-SIGNING.md  Cargo.toml  IMPLEMENTATION-SUMMARY.md  QUICK-START.md  README.md  TEST-USAGE.md  client_config.yaml  config-client-signing.toml  config.example.toml  config.toml  server_side_test_config.toml  test-client-signing.sh  test-complete.sh  test-config-minimal.toml  test-config.toml  test-write-ops.sh  test_script.sh  test_server_wallet.yaml
crates/walrus-s3-gateway/examples/: usage_example.rs
crates/walrus-s3-gateway/src/: auth.rs  config.rs  credentials.rs  error.rs  lib.rs  metadata.rs  s3_types.rs  server.rs  utils.rs
crates/walrus-s3-gateway/src/handlers/: bucket.rs  mod.rs  object.rs  signing.rs
crates/walrus-s3-gateway/tests/: .env.example  README.md  common.rs  integration.rs  test-complete.sh  test-enhanced-signing.sh  test_authentication.rs  test_client_signing.rs  test_integration.rs  test_s3_operations.rs
crates/walrus-s3-gateway/tests/common/: mod.rs
crates/walrus-sdk/: Cargo.toml  client_config_example.yaml
crates/walrus-sdk/src/: active_committees.rs  api.rs  blocklist.rs  client.rs  config.rs  error.rs  lib.rs  node_client.rs  node_response.rs  refresh.rs  responses.rs  storage_node.rs  store_optimizations.rs  tls.rs  upload_relay.rs  uploader.rs  utils.rs  walrus.rs
crates/walrus-sdk/src/api/: errors.rs
crates/walrus-sdk/src/client/: async_upload_test.rs  async_upload_wrapper.rs  async_uploader.rs  auto_tune.rs  blob_manager_client.rs  (+19 more)
crates/walrus-service/: Cargo.toml  aggregator_openapi.html  aggregator_openapi.yaml  client_config_example.yaml  daemon_openapi.html  daemon_openapi.yaml  example-client-config.yml  node_config_example.yaml  publisher_openapi.html  publisher_openapi.yaml  storage_node_blob_manager_design.md  storage_openapi.html  storage_openapi.yaml
crates/walrus-service/src/: aggregator.rs  api.rs  backup.rs  cli_utils.rs  client.rs  committee.rs  common.rs  config.rs  crypto.rs  daemon.rs  encoding.rs  event.rs  events.rs  keys.rs  lib.rs  mapping.rs  move_client.rs  node.rs  server.rs  storage.rs  system_events.rs  telemetry.rs  test_cluster.rs  test_utils.rs  testbed.rs  utils.rs
crates/walrus-service/tests/: epoch_change.rs  node_tests.rs  test_client.rs  test_field_masking_integration.rs
crates/walrus-simtest/: Cargo.toml  README.md
crates/walrus-simtest/src/: test_utils.rs
crates/walrus-simtest/tests/: simtest.rs  simtest_core.rs  simtest_event_blob.rs  simtest_failure.rs  simtest_param_sync.rs  simtest_pending_uploads.rs  simtest_storage_pool.rs
crates/walrus-storage-pool-test/: Cargo.toml  client_config.yaml
crates/walrus-storage-pool-test/src/: main.rs
crates/walrus-test-utils/: Cargo.toml
crates/walrus-test-utils/src/: lib.rs
(+79439 files in other folders)
