[package]
name = "fan-out-proxy"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
fastcrypto.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
walrus-core.workspace = true
walrus-sdk.workspace = true
walrus-sui.workspace = true

[features]
default = ["test-client"] # TODO: Remove this eventually.
test-client = []
