[package]
name = "fan-out-proxy"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
bcs.workspace = true
clap.workspace = true
clap_complete.workspace = true
fastcrypto.workspace = true
futures.workspace = true
git-version.workspace = true
mysten-metrics.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sui-sdk.workspace = true
# TODO: expose sui-types via walrus_sdk.
sui-types.workspace = true
telemetry-subscribers.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "macros"] }
utoipa-redoc.workspace = true
# walrus-core.workspace = true
# walrus-proc-macros.workspace = true
walrus-sdk.workspace = true
# walrus-storage-node-client.workspace = true
# walrus-sui.workspace = true

[features]
default = ["test-client"] # TODO: Remove this eventually.
test-client = []
