[package]
name = "walrus-core"
publish = false
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
fastcrypto = "0.1.7"
raptorq = "1.8.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"

[lints]
workspace = true
