[package]
name = "walrus-core"
publish = false
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bcs = { workspace = true }
fastcrypto = { workspace = true }
raptorq = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = { workspace = true }
rand = "0.8.5"

[lints]
workspace = true

[dev-dependencies]
walrus-test-utils = { workspace = true }
