[package]
name = "walrus-e2e-tests"
publish = false
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
test-cluster = { git = "https://github.com/mystenlabs/sui", package = "test-cluster"}
sui-move-build = { git = "https://github.com/MystenLabs/sui" }
tokio = { version = "1.36.0", features = ["macros"] }
anyhow = "1.0.80"

[dev-dependencies]
