[package]
name = "walrus-e2e-tests"
publish = false
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = "1.0.80"
fastcrypto  = { workspace = true }
sui-move-build = { workspace = true }
sui-sdk = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
walrus-core = { workspace = true }
walrus-sui = { workspace = true }

[dev-dependencies]
test-cluster = { workspace = true }
