[package]
name = "walrus-e2e-tests"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
anyhow.workspace = true
futures.workspace = true
prometheus.workspace = true
sui-macros.workspace = true
sui-protocol-config.workspace = true
sui-simulator.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walrus-core.workspace = true
walrus-proc-macros.workspace = true
walrus-sdk.workspace = true
walrus-service = { workspace = true, features = ["test-utils"] }
walrus-sui.workspace = true
walrus-test-utils.workspace = true

[lints]
workspace = true
