[package]
name = "walrus-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Walrus Foundation"]
license = "Apache-2.0"

[[bin]]
name = "walrus-indexer"
path = "src/bin/indexer.rs"

[lib]
name = "walrus_indexer"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-store = { workspace = true }

# Walrus dependencies
checkpoint-downloader = { workspace = true }
walrus-core = { path = "../walrus-core" }
walrus-sdk = { path = "../walrus-sdk" }
walrus-service = { path = "../walrus-service" }
walrus-sui = { path = "../walrus-sui" }
walrus-utils = { path = "../walrus-utils" }

# Sui dependencies
move-core-types = { workspace = true }
sui-package-resolver = { workspace = true }
sui-sdk = { workspace = true }
sui-types = { workspace = true }

# Database
rocksdb = { workspace = true }

# Additional dependencies for event processing
bcs = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
mysten-metrics = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
telemetry-subscribers = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
walrus-proc-macros = { path = "../walrus-proc-macros", features = ["walrus-simtest"] }
walrus-sdk = { path = "../walrus-sdk" }
walrus-service = { path = "../walrus-service", features = ["test-utils"] }
walrus-test-utils = { path = "../walrus-test-utils" }
