[package]
name = "walrus-indexer"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "walrus_indexer"
path = "src/lib.rs"

[dependencies]
# Core async/web/database dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
typed-store = { workspace = true }

# Walrus dependencies
walrus-core = { path = "../walrus-core" }
walrus-sdk = { path = "../walrus-sdk" }
walrus-service = { path = "../walrus-service" }
walrus-sui = { path = "../walrus-sui" }
walrus-utils = { path = "../walrus-utils" }

# Sui dependencies
sui-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
