[package]
name = "local-testbed"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
glob.workspace = true
nix.workspace = true
serde.workspace = true
libc = "0.2.169"
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shlex = "1.3.0"

[lints]
workspace = true
