[package]
name = "walrus-node-prober"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
indicatif.workspace = true
mysten-metrics.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walrus-core.workspace = true
walrus-sdk.workspace = true
walrus-service = { workspace = true, features = ["client"] }
walrus-sui.workspace = true
walrus-test-utils.workspace = true
walrus-utils.workspace = true

[lints]
workspace = true
