[package]
name = "walrus-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-server = { workspace = true, features = ["tls-rustls"] }
bytes.workspace = true
clap.workspace = true
const-str.workspace = true
fastcrypto.workspace = true
futures.workspace = true
git-version.workspace = true
hyper.workspace = true
itertools.workspace = true
mysten-metrics.workspace = true
once_cell.workspace = true
prometheus.workspace = true
prost.workspace = true
protobuf.workspace = true
rand.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
snap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower.workspace = true
tower-http = { workspace = true, features = ["timeout"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
uuid.workspace = true

[lints]
workspace = true
