[package]
name = "walrus-s3-gateway"
version = "1.29.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
description = "S3-compatible gateway for Walrus"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
mime = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = { workspace = true }
hmac = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
xml-rs = { workspace = true }
quick-xml = { workspace = true }
toml = { workspace = true }
md5 = "0.7"
bcs = { workspace = true }
tempfile = "3.10"

# Walrus dependencies
walrus-core = { workspace = true }
walrus-sdk = { workspace = true }
walrus-sui = { workspace = true }
walrus-utils = { workspace = true }
sui-types = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
tower = { workspace = true, features = ["util"] }
axum-test = "14.0"
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
assert_matches = "1.5"
urlencoding = "2.1"
reqwest = { workspace = true, features = ["json"] }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
