[package]
name = "walrus-sdk"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
test-utils = [
  "dep:tempfile",
]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fastcrypto.workspace = true
home.workspace = true
indoc.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
reqwest.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
walrus-core.workspace = true
walrus-rest-client.workspace = true
walrus-sui.workspace = true
walrus-test-utils.workspace = true
walrus-utils.workspace = true

[lints]
workspace = true
