[package]
name = "walrus-simtest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sui-json-rpc-types = { workspace = true, features = ["test-utils"] }
sui-macros.workspace = true
sui-protocol-config.workspace = true
tokio.workspace = true
walrus-core.workspace = true
walrus-service = { workspace = true, features = ["test-utils"] }
walrus-test-utils.workspace = true

[lints]
workspace = true

[target.'cfg(msim)'.dependencies]
sui-simulator.workspace = true
