[package]
name = "walrus-test-utils"
publish = false
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
tempfile = { workspace = true }
fastcrypto = { workspace = true }
rand = "0.8.5"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
